Fix bug: container not showing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,12 +97,12 @@ h1, h2 {
     position: relative;
     margin: 20px 20px 0 20px;
     height: 100%;
+    
   }
 
   label, #slider {
     display: inline-block;
     box-sizing: border-box;
-    font-weight: bold;
     text-align: center;
     background: #F2D64B;
     user-select: none;
@@ -116,15 +116,14 @@ h1, h2 {
   }
 
   .content {
-    position: relative;
-    top: 56px; right: 0; bottom: 0; left: 0;
+    position: absolute;
+    top: 42px; right: 0; bottom: 0; left: 0;
     background: white;
     display: none;
     min-height: 300px;
-    box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
+    box-shadow: 2px 2px 8px rgba(151, 157, 166, 0.5);
     margin-top: 35px;
     padding: 20px;
-   
   }
 
   #slider {
